--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     "homepage": "http://framework.zend.com/",
     "license": "BSD-3-Clause",
     "prefer-stable": true,
+    "minimum-stability": "dev",
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0",
-        "diablomedia/zendframework1-config": "^1.0.2 || ^2.0.0",
-        "diablomedia/zendframework1-db": "^1.0.2",
-        "diablomedia/zendframework1-validate": "^1.0.2"
+        "php": "^7.4 || ~8.0.0 || ~8.1.0 || ~8.2.0",
+        "diablomedia/zendframework1-config": "dev-php-82 as 2.0.0",
+        "diablomedia/zendframework1-db": "dev-php-82 as 1.0.2",
+        "diablomedia/zendframework1-validate": "dev-php-82 as 1.0.2"
     },
     "autoload": {
         "psr-0": {
@@ -27,8 +28,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.10",
-        "phpstan/phpstan": "1.8.0",
-        "friendsofphp/php-cs-fixer": "3.8.0",
+        "phpstan/phpstan": "1.10.13",
+        "friendsofphp/php-cs-fixer": "3.16.0",
         "maglnet/composer-require-checker": "^3.0.0",
         "phpro/grumphp-shim": "^1.5.0"
     },
@@ -42,5 +43,10 @@
         "test-with-coverage": "phpunit --coverage-clover=clover.xml",
         "phpstan": "phpstan analyze -c phpstan.neon --no-progress --ansi",
         "style-check": "php-cs-fixer fix --dry-run -vv"
+    },
+    "config": {
+        "allow-plugins": {
+            "phpro/grumphp-shim": true
+        }
     }
 }
