--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.4 || ~8.0.0 || ~8.1.0 || ~8.2.0",
-        "diablomedia/zendframework1-config": "^2.0.0",
+        "diablomedia/zendframework1-config": "^1.0.2 || ^2.0.0",
         "diablomedia/zendframework1-db": "^1.0.2",
         "diablomedia/zendframework1-validate": "^1.0.2"
     },
