--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "~8.0.0 || ~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "diablomedia/zendframework1-config": "^2.0.5",
-        "diablomedia/zendframework1-db": "dev-php-84 as 1.0.5",
+        "diablomedia/zendframework1-db": "^1.0.5",
         "diablomedia/zendframework1-validate": "^1.0.5"
     },
     "autoload": {
@@ -27,7 +27,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6.19 || ^10.5.18",
-        "phpstan/phpstan": "2.1.16",
+        "phpstan/phpstan": "2.1.17",
         "friendsofphp/php-cs-fixer": "3.75.0",
         "maglnet/composer-require-checker": "^3.0.0",
         "phpro/grumphp-shim": "^2.0.0"
